clusters/pi-cluster/apps/portainer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
  name: portainer
  labels:
    app: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      annotations:
        traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
      labels:
        app: portainer
    spec:
      containers:
      - name: portainer
        image: portainer/portainer-ce:latest
        ports:
        - containerPort: 9000
        - containerPort: 8000
        volumeMounts:
        - name: portainer-data
          mountPath: /data
        - name: docker-socket
          mountPath: /var/run/docker.sock
      volumes:
      - name: portainer-data
        persistentVolumeClaim:
          claimName: portainer-data
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
  name: portainer
spec:
  selector:
    app: portainer
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  - name: edge
    port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
  name: portainer
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - portainer.k3s.tophermayor.com
    secretName: wildcard-tophermayor-tls
  rules:
  - host: portainer.k3s.tophermayor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
